examples/test/testpolicy13181.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13181
  namespace: namespace52
spec:
  podSelector:
    matchLabels:
      key20: value17
      key1: value26
      key8: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value33
          key21: value45
          key35: value16
      podSelector:
        matchLabels:
          key1: value22
